--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,33 @@ section .content1 .image-greenhouse
 }
 /*---------------section1-----------------------------*/
 
+/*---------------offer-----------------------------*/
+.offer{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.offer .special-offers
+{
+    margin: 60px 20px;
+    font-size: 25px;
+}
+.offer .box-offer .rectangle
+{
+    width: 350px;
+    height: 350px;
+    border: 2px gray solid;
+    margin: 20px;
+}
+
+.offer .box-offer .rectangle .images-offer
+{
+    width: 340px;
+    margin: 5px;
+}
+
+.offer .box-offer .product-preview  h3{
+    margin: 20px;
+}
+/*---------------offer-----------------------------*/
