--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,19 @@ h1
 {
     font-size: 50px;
 }
+.btn{
+    width: 120px;
+    padding: 10px 20px;
+    color: white;
+    border-radius: 40px;
+    border: none;
+    background: green;
+    font-size: 15px;
+}
 /*---------global-----------------------*/
 .login
 {
-    background-color: rgb(204, 202, 202);
+    background-color: rgb(223, 223, 223);
     height: 4vh;
     text-align: end;
 }
@@ -49,15 +58,7 @@ padding-top: 1vh;
 {
     border-left: 2px rgb(10, 10, 10) solid;
 }
-.btn{
-    width: 120px;
-    padding: 15px 30px;
-    color: white;
-    border-radius: 40px;
-    border: none;
-    background: green;
-    font-size: 15px;
-}
+
 .btn:hover
 {
     background: rgb(1, 102, 1);
@@ -133,7 +134,7 @@ nav .nav .nav-list .list .nav-item-list a:hover
 section .content1
 {
     height: 50vh;
-    background: rgb(204, 202, 202);
+    background: rgb(223, 223, 223);
 }
 
 section .content1 .title
@@ -163,17 +164,24 @@ section .content1 .image-greenhouse
     margin-right: auto;
     
 }
+
+.offer .product-preview
+{
+    width: 350px;
+    margin: 80px 50px 80px 0px
+}
 .offer .special-offers
 {
-    margin: 60px 20px;
+    margin: 60px 0;
     font-size: 25px;
+    
 }
 .offer .box-offer .rectangle
 {
     width: 350px;
     height: 350px;
     border: 2px gray solid;
-    margin: 20px;
+  
 }
 
 .offer .box-offer .rectangle .images-offer
@@ -183,6 +191,46 @@ section .content1 .image-greenhouse
 }
 
 .offer .box-offer .product-preview  h3{
-    margin: 20px;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+
+.offer .box-offer .product-preview .btn-buy-now
+{
+    width: 180px;
+    
+}
+
+.offer .box-offer .product-preview .btn-buy-now .basket
+{
+    font-size: 20px;
+    margin-right: 10px;
 }
 /*---------------offer-----------------------------*/
+
+/*---------------about-us-----------------------------*/
+.about-us{
+    height: 90vh;
+    background: rgb(223, 223, 223);
+    
+}
+
+.about-us .about-us-photo img{
+    width: 535px;
+}
+
+.about-us .about-us-content{
+    margin-left: 20%;
+    width: 600px;
+    font-size: 20px;
+}
+.about-us .about-us-content h1, p{
+    margin: 20px 0;
+}
+
+.about-us .about-us-content .btn-read-more
+{
+    width: 150px;
+}
+/*---------------about-us-----------------------------*/
