--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ section .content1 .image-greenhouse
 .about-us .about-us-content{
     margin-left: 20%;
     width: 600px;
-    max-height: 90vh;
+    max-height: 50vh;
     font-size: 20px;
 }
 .about-us .about-us-content h1, p{
@@ -244,17 +244,16 @@ section .content1 .image-greenhouse
 .why-us
 {
     width: 1000px;
-    height: 70vh;
+    height: 55vh;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 60px;
     font-size: 25px;
 }
 
 .why-us .containter .rectangle-icon{
     width: 300px;
     text-align: center;
-    margin: 30px;
+    margin: 20px;
 }
 .why-us .containter .rectangle-icon .icon
 {
@@ -277,34 +276,17 @@ section .content1 .image-greenhouse
 }
 
 .news .grid-news{
-    margin-top: 40px;
+    margin-top: 10px;
     display: grid;
-    grid-template-columns: 400px 400px ;
-    grid-column-gap: 100px;
+    position: relative;
+    grid-template-columns: 500px 500px ;
+    grid-column-gap: 200px;
     grid-row-gap: 50px;
    
 } 
 .news .grid-news .caption{
     font-size: 25px;
-   
 }
-
-
-.data{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: green;
-    position: relative;
-    left: -70px;
-    top: 95px;
-
-    
-}
-
-
-
-
 .news .grid-news p{
     color: rgb(68, 68, 68);
 }
@@ -314,5 +296,46 @@ section .content1 .image-greenhouse
     padding: 10px 0;
     background: gray;
 }
-/*---------------news-----------------------------*/
+/*---------------video-----------------------------*/
+.video{
+    margin-top: 100px;
+    height: 60vh;
+    width: 1200px;
+   
+
+}
+.video .technology{
+    width: 500px;
+    margin-right: 200px;
+   
+}
+.video .technology span, p{
+   font-size: 20px;
+   line-height: 30px;
+}
+.video .technology h2{
+    font-size: 40px;
+}
+.video .video-1 video{
+    width: 500px;
+    height: 300px;
+}
+
+/*---------------video-----------------------------*/
+
+/*---------------footer----------------------------*/
+.mini-logo{
+    display: inline-block;
+}
+.mini-logo img{
+width: 60px;
+border-radius: 50%;
+}
+
+.mini-logo .logo-item{
+    display: inline-block;
+    vertical-align: 20px;
+    font-size: 30px;
+}
+/*---------------footer-----------------------------*/
 
